# napari-annotator

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: plugin_preview.yml  test_and_deploy.yml
.napari/: DESCRIPTION.md
.napari-hub/: DESCRIPTION.md
src/napari_annotator/: __init__.py  _annotation_entry.py  _annotations_list_widget.py  _dock_widget.py  napari.yaml
src/napari_annotator/_tests/: test_dock_widget.py
