[metadata]
name = napari-annotator
version = 0.0.1
author = Loïc Sauteur
author_email = loic.sauteur@unibas.ch
url = https://github.com/loicsauteur/napari-annotator
license = BSD-3-Clause
description = A lightweight plugin extending label layer control
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/loicsauteur/napari-annotator/issues
    Documentation = https://github.com/loicsauteur/napari-annotator#README.md
    Source Code = https://github.com/loicsauteur/napari-annotator
    User Support = https://github.com/loicsauteur/napari-annotator/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    skimage

[options.packages.find]
where = src

[options.package_data]
napari-annotator = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-annotator = napari_annotator:napari.yaml
