[metadata]
name = napari_annotator
version = 0.0.1
description = A lightweight plugin extending label layer control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/loicsauteur/napari-annotator
author = Loïc Sauteur
author_email = loic.sauteur@unibas.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/loicsauteur/napari-annotator/issues
    Documentation = https://github.com/loicsauteur/napari-annotator#README.md
    Source Code = https://github.com/loicsauteur/napari-annotator
    User Support = https://github.com/loicsauteur/napari-annotator/issues

[options]
packages = find:
install_requires =
    numpy
    scikit-image
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-annotator = napari_annotator:napari.yaml

[options.package_data]
napari_annotator =
    napari.yaml
